--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
   padding: 0;
   overflow: hidden;
 } */
+
+/* Custom scrollbar hide */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
